PineApple_Vonage_Post_Call_Transcript/force-app/main/default/objects/VonageCall__c/VonageCall__c.object-meta.xml
<CustomObject>
    <label>Vonage Call</label>
    <nameField>
        <displayFormat>CC-{00000000}</displayFormat>
        <label>Vonage Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vonage Calls</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>