PineApple_Vonage_Post_Call_Transcript/force-app/main/default/objects/VonageCall__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Vonage Calls</relationshipLabel>
    <relationshipName>Calls</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>