PineApple_Vonage_Post_Call_Transcript/force-app/main/default/objects/VonageCall__c/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <label>Evaluation</label>
    <length>250</length>
    <type>Text</type>
</CustomField>