PineApple_Vonage_Post_Call_Transcript/force-app/main/default/objects/VonageCall__c/fields/Full_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Full_Transcript__c</fullName>
    <label>Full Transcript</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>