PineApple_Vonage_Post_Call_Transcript/force-app/main/default/objects/VonageCall__c/fields/Transcript__c.field-meta.xml
<CustomField>
    <fullName>Transcript__c</fullName>
    <label>Transcript</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>