PineApple_Vonage_Post_Call_Transcript/force-app/main/default/objects/VonageCall__c/fields/UrgentColor__c.field-meta.xml
<CustomField>
    <fullName>UrgentColor__c</fullName>
    <formula>IMAGE( Urgent__c ,&quot;Urgent Color&quot;,40,40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UrgentColor</label>
    <type>Text</type>
</CustomField>